Modified ebnf to be parsable

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3442,12 +3442,16 @@ Approximation        = 'approximation' , [ QualInterfaceSignature ] , [ LogicRef
 Filtering            = 'select' , BasicOMS 
                      | 'reject' , BasicOMS ;
 
-ExtensionOMS         = [ ExtConsStrength ] , [ ExtensionName ] , ExtendingOMS ;
+ConsStrength         = Conservative 
+		     |  MonoDef ;
 
-ConsStrength         = Conservative | 'monomorphic'
-                     | 'weak-definitional' | 'definitional' ;
+MonoDef 	     = 'monomorphic'  
+		     | 'weak-definitional' 
+		     | 'definitional' ;
 
-ExtConsStrength      = ConsStrength | 'implied' ;
+ExtConsStrength      = ConsStrength | Implied ;
+
+Implied 	     = 'implied' ;
 
 Conservative         = 'consequence-conservative' | 'model-conservative' ;
 
