--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -469,7 +469,6 @@ author=,date=,id=,replyto=,type=}{}%
 \begin{document}
 
 
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %  FRONTMATTER:
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -6827,41 +6826,24 @@ to the term \termref{structured OMS} in this \IS}
 
 \newcommand{\toleft}{\noindent$x\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!$}
 
-\includegraphics[width=1.2\textwidth]{mof/dia/dia0.png}
+\includegraphics[scale=0.6]{mof/dia/dia0.png}
 
-\includegraphics[width=1.2\textwidth]{mof/dia/dia1.png}
+\includegraphics[scale=0.6]{mof/dia/dia1.png}
 
-\toleft\includegraphics[width=2.3\textwidth]{mof/dia/dia2.png}
+\toleft\includegraphics[scale=0.4]{mof/dia/dia2.png}
 
-\toleft\includegraphics[width=1.6\textwidth]{mof/dia/dia3.png}
+\toleft\includegraphics[scale=0.6]{mof/dia/dia3.png}
 
-\toleft\includegraphics[width=1.9\textwidth]{mof/dia/dia4.png}
+\toleft\includegraphics[scale=0.4]{mof/dia/dia4.png}
 
-\includegraphics[width=0.5\textwidth]{mof/dia/dia5.png}
+\includegraphics[scale=0.6]{mof/dia/dia5.png}
 
-\includegraphics[width=1.2\textwidth]{mof/dia/dia6.png}
+\includegraphics[scale=0.6]{mof/dia/dia6.png}
 
-\includegraphics[width=1.2\textwidth]{mof/dia/dia7.png}
+\includegraphics[scale=0.6]{mof/dia/dia7.png}
 
-\includegraphics[width=1.2\textwidth]{mof/dia/dia8.png}
+\includegraphics[scale=0.6]{mof/dia/dia8.png}
 
-\includegraphics[width=1.2\textwidth]{mof/dia/dia9.png}
-
-\toleft\includegraphics[width=1.5\textwidth]{mof/dia/dia10.png}
-
-\toleft\includegraphics[width=1.4\textwidth]{mof/dia/dia11.png}
-
-\toleft\includegraphics[width=2.1\textwidth]{mof/dia/dia12.png}
-
-\includegraphics[width=\textwidth]{mof/dia/dia13.png}
-
-\toleft\includegraphics[width=1.8\textwidth]{mof/dia/dia14.png}
-
-\includegraphics[width=0.5\textwidth]{mof/dia/dia15.png}
-
-\toleft\includegraphics[width=1.5\textwidth]{mof/dia/dia16.png}
-
-\toleft\includegraphics[width=1.4\textwidth]{mof/dia/dia17.png}
 
 
 \infannex{Tools for DOL}\label{a:tools}
