first part of Terry's proofreading

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -796,7 +796,7 @@ DOL provides such a construct with syntax \syntax{o keep logic},  see \ref{c:foc
 Proposals shall provide a specification of a metalanguage for links such as imports,
 interpretations, refinements, and alignments between OMS/modules.
 	&
-DOL covers several metalogical relationships, namely entailments, interpretations, equivalences, refinements, alignments and module relations, see \ref{c:oms-mappings} and \ref{a:dol-text:mappings}.
+DOL covers several metalogical relationships, namely entailments, interpretations, equivalences, refinements, alignments and module relations, see \ref{c:oms-mappings} and \ref{a:dol-text:mappings}.\ednote{Terry: Do you want to mention institutions here, presaging 6.5.4 ? and add 8.4 to the see list?}
 	\\ \hline
 %
 6.5.1(g) & 
@@ -859,7 +859,7 @@ The formal semantics is given in clause \ref{c:semantics}.
 %
 %
 6.5.4(a)& 
-Existing OSMs in existing serializations shall validate as OSMs in the metalanguage with a minimum
+Existing OMS in existing serializations shall validate as OMS in the metalanguage with a minimum
 amount of syntactic adaptation.	& 
 Any document providing an OMS in a serialization of a DOL conformant
 language can be used as-is in DOL, by reference to its IRI.
@@ -867,7 +867,7 @@ See \ref{sec:existing-serialization}.
    \\ \hline
 %
 6.5.4(b)& 
-It shall be possible to refer to existing files/documents from an OSM implemented in the
+It shall be possible to refer to existing files/documents from an OMS implemented in the
 metalanguage without the need for modifying these files/documents.	&
 Documents can be referenced by IRIs, see \ref{c:iris}.
    \\ \hline
@@ -903,7 +903,7 @@ Conformance of some translations is established in annex \ref{a:graph}.
    \\ \hline
 %
 6.5.6 & 
-Existing standards and best practices for allocating globally unique identifiers hall be reused.
+Existing standards and best practices for allocating globally unique identifiers shall be reused.
 The same standards and best practices shall also be applied to associate different representations
 of the same content to one unique identifier.	&
 DOL uses IRIs to reference documents (both DOL documents, as well
@@ -943,7 +943,7 @@ This is left for future work.
 6.6.2 & 
 Proposals may provide constructs for non-monotonic logics. 	&
 Currently, only monotonic logics are supported.
-However, there DOL provides a circumscription-like non-monotonic
+However, DOL provides a circumscription-like non-monotonic
 structuring construct with syntax \syntax{o1 then \%minimize o2},
 see \ref{c:focused-OMS} and \ref{a:dol-text:OMS}.
    \\ \hline
@@ -981,9 +981,9 @@ This is left for future work.
 6.7.(a)	& 
 Do existing language standards need to be extended or adapted in order to make them OntoIOp conforming.	&
 The goal of DOL is to support existing languages without any
-adaptions, see also 6.5.4(a). However, in order to meet
+adaptations, see also 6.5.4(a). However, in order to meet
 requirement 6.5.6, DOL-conforming languages should support the
-use of IRIs. If they do not, there is a mechanism of assigning IRIs
+use of IRIs. If they do not, there is a mechanism for assigning IRIs
 to (fragments of) language documents even if the language itself does not support
 this, see \ref{c:conform:serialization}.
 Moreover, there is a mechanism for injecting annotations
@@ -992,7 +992,7 @@ and comments in existing language serializations, see \ref{sec:existing-serializ
 %
 6.7.(b)	& 
 Proposals should discuss whether the semantics of the metalanguage shall be included into the standard.	&
-We have included the semantics into the standard. The reasons are discussed
+We have included DOL metalanguage semantics in this specification. The reasons are discussed
 in the introduction of clause \ref{c:semantics}.
    \\ \hline
 %	
@@ -1271,9 +1271,7 @@ institution \cite{GoguenBurstall92}.
 % It may additionally be presented as an institution, leading
 %to the possibility of interpreting additional DOL language constructs.%
 \footnote{Institutions are necessarily monotonic; conformance criteria for non-monotonic logics are
-still under development. However, minimization provides non-monotonic reasoning in DOL. A further
-possibility to include non-monotonic logics is to construe entailments between formulas as
-sentences of the institution.} Note that one OMS language can have several sublanguages or profiles 
+still under development. However, minimization provides non-monotonic reasoning in DOL. It is also possible to include non-monotonic logics by construing entailments between formulas as sentences of the institution.} Note that one OMS language can have several sublanguages or profiles 
 corresponding to several logics (for example, OWL 2 has profiles EL, RL and QL, apart from the
 whole OWL 2 itself).
 
@@ -1290,10 +1288,10 @@ We define the following levels of conformance of the abstract syntax of a basic
  OMS language with DOL, listed from highest to lowest:
 
 \begin{description}
-\item[Full IRI conformance] The abstract syntax enforces that IRIs be used for
+\item[Full IRI conformance] The abstract syntax specifies that IRIs be used for
  identifying all symbols and entities.
-\item[No mandatory use of IRIs] The abstract syntax does not enforce that IRIs
- be used for identifying all entities.  Note that this includes the case of
+\item[No mandatory use of IRIs] The abstract syntax does not require  IRIs
+ to be used to identify entities. Note that this includes the case of
   optionally supporting IRIs without enforcing their use (such as in Common
   Logic).
 \end{description}
@@ -1305,8 +1303,7 @@ Any conforming language and logic shall have a machine-processable description
 
 Rationale: a translation between logics must satisfy certain criteria in order to conform with DOL.
 Also, a translation between OMS languages based on such logics must be consistent with the
-translation between these logics.  Translations should not break structuring language aspects nor
-comments/annotations either.
+translation between these logics.  Translations should break neither structuring language aspects nor comments/annotations.
 
 A logic translation is conforming with DOL if it is presented either as an institution morphism or
 as an institution comorphism.  
@@ -1342,7 +1339,7 @@ that serialization must look like in order to support this identifier injection.
 Well-behaved XML and RDF schemas support identifier injection in a `nice' way (rather than using
 text-level comments).   In the worst case we cannot 
 inject anything into an OMS language fragment, because the OMS language serialization simply
-wouldn't allow us to write suitable comments, but we'd have to point into it from the outer space
+wouldn't allow us to write suitable comments, but we'd have to point into it from the enclosing context by
 by using standoff markup.
 
 Further conformance criteria in this section are introduced to facilitate the convenient reuse of
@@ -3064,9 +3061,8 @@ constructs of DOL. Details can be found in clause~\ref{c:abstract-syntax}.
 \section{DOL in a nutshell}
 
 As the usage scenarios in clause \ref{c:goal} illustrate, the use of multiple OMS may lead to lack 
- of interoperability. The goal of \DOL is to enable users to overcome these interoperability issues 
-by providing a language which allows to represent structured OMS and the relations between OMS as 
-part of OMS networks in a semantically well-defined way. One particular challenge that needs to be
+ of interoperability. The goal of \DOL is to enable users to overcome these interoperability issues by providing a language for representing 
+structured OMS and the relations between OMS as part of an OMS network in a semantically well-defined way. One particular challenge that needs to be
 addressed is that OMS are written in a wide variety of OMS languages, which differ in style, 
 expressivity and logical properties. 
 We face this diversity not by proposing a
@@ -3079,11 +3075,11 @@ The major functions of \DOL are the following:
 \begin{itemize}
 		\item \DOL allows the use of OMS in other OMS languages (e.g., UML class diagrams, \CASL, 
 		OWL, Common Logic) without requiring any changes. These are called \emph{basic OMS}.  
-		\item \DOL allows to define new, more complex  OMS based on existing OMS. These OMS are
+		\item \DOL provides for defining new, more complex  OMS based on existing OMS. These OMS are
 		called \emph{structured OMS}. \DOL provides a number of operations for this purpose; e.g.,
 		it is possible to define a structured OMS $C$ as the union of an OWL
 		ontology $A$ and a Common Logic ontology $B$.
-		\item \DOL allows to define connections between two OMS by using 
+		\item \DOL provides defining connections between two OMS by using 
 		\emph{OMS mappings}. \DOL provides a variety of mappings; e.g.,  one can align terminology 
 		between different OMS or specify that some OMS is an extension of another. A set of OMS
 		and OMS mappings may form together an \emph{OMS network}.
@@ -3159,11 +3155,11 @@ Since \DOL is a meta-language,  it \textit{inherits} the logical language aspect
  OMS languages are declarative languages for making ontological distinctions formally precise, for modeling a domain in an unambiguous way, or for expressing algebraic specifications of software.   OMS languages are distinguished by the following features:
 
 \begin{description}
-\item[Logic] Most commonly, OMS languages are based on a description logic or some other subset of first-order logic, but in some cases, also higher-order, modal, paraconsistent and other logics are used.
+\item[Logic] Most commonly, OMS languages are based on a description logic or some other subset of first-order logic, but in some cases, higher-order, modal, paraconsistent and other logics are used.
 \item[Modularity] A means of structuring an OMS into reusable parts, reusing parts of other OMS, mapping imported symbols to those in the importing OMS, and asserting additional properties about imported symbols.
 \item[Annotation] A means of attaching human-readable descriptions to OMS symbols, addressing knowledge engineers and service developers, but also end users of OMS-based services.\ednote{TODO Christoph: reformulate. DOL enables the use of annotations}
 \end{description}
-Whereas the first feature determines the expressivity of the language and the possibilities for automated reasoning (decidability, tractability, etc.), the latter two intend to facilitate OMS engineering as well as the engineering of OMS-based software.
+Whereas the first feature determines the expressivity of the language and the possibilities for automated reasoning (decidability, tractability, etc.), the latter two facilitate OMS engineering as well as the engineering of OMS-based software.
 
 Acknowledging the wide tool support that conforming established languages such as OWL, Common Logic, MOF, or \CASL\ednote{review language list when annexes are finished} enjoy, existing OMS in these languages remain as they are within the DOL framework. DOL enhances their modularity and annotation facilities to a superset of the modularity and annotation facilities they provide themselves. 
 DOL's modularity and annotation constructs can either be embedded into existing OMS as non-disruptive annotations, or they can be provided as standoff markup, pointing to the OMS they talk about; DOL specifies a syntax and semantics for both variants. DOL's modularity constructs are semantically well-founded within a library of formal relationships between the logics underlying the different supported OMS languages.\ednote{Till, is this standoff markup remark up to date?}
@@ -3196,7 +3192,7 @@ an \emph{entailment system} \cite{Meseguer89}. In particular, this
 can be done for all logics that have so far been in use in \DOL.
 
 
-Since institutions allow to abstract from the differences between the different OMS languages, 
+Since institutions allow the differences between OMS languages to be elided to common abstractions, 
 the semantics of basic OMS is presented in a uniform way.  The semantics of structured OMS, 
 OMS mappings, OMS networks, and other DOL expressions is defined using model-theoretic constructions
 on top of institutions. 
@@ -3266,12 +3262,13 @@ translation that expands any DOL OMS with implicit assumptions
 into its explicit counterpart.\todo{Terry: (Is this true? if so, rewrite). Perhaps:  This OMS Specification provides a means to specify a translation to expand any DOL OMS with implicit assumptions into an  explicit counterpart. 
 (is such a translation counterpart necessarily unique, either syntactically or semantically?  If a semantically preserving syntax change occurs to the original, will the counterpart change?)}
 
-The following list covers the possible cases where DOL provides a choice between representing information implicitly or  explicitly:
-\begin{description}
-\item[default OMS language translations] A heterogeneous OMS can import several OMS expressed in different conforming logics, for which suitable translations have been defined in the logic graph provided in \aref{a:graph} or in an extension to it that has been provided when establishing the conformance of some other logic with DOL.  Determining the semantics of the heterogeneous OMS requires a translation into a common target language to be applied (\cf \cref{c:semantics}).  This translation is determined via a lookup in the transitive closure of the logic graph.  Depending on the reasoners available in the given application setting, it can, however, be necessary to employ a different translation.  Authors can express which one to employ.  In a multi-step translation, it is possible to implicitly apply as many default translations as possible, and to concentrate on making explicit only those translations that deviate from the default.\CLnote[type=q-aut]{Will this situation be the same for default approximations, or to we need to add an extra item to the list?}
+There is one case where DOL provides a choice between representing information implicitly or  explicitly:
+%\begin{description}
+%\item[default OMS language translations] 
+A heterogeneous OMS can import several OMS expressed in different conforming logics, for which suitable translations have been defined in the logic graph provided in \aref{a:graph} or in an extension to it that has been provided when establishing the conformance of some other logic with DOL.  Determining the semantics of the heterogeneous OMS requires a translation into a common target language to be applied (\cf \cref{c:semantics}).  This translation is determined via a lookup in the transitive closure of the logic graph.  Depending on the reasoners available in the given application setting, it can, however, be necessary to employ a different translation.  Authors can express which one to employ.  In a multi-step translation, it is possible to implicitly apply as many default translations as possible, and to concentrate on making explicit only those translations that deviate from the default.\CLnote[type=q-aut]{Will this situation be the same for default approximations, or to we need to add an extra item to the list?}
 %\item[different matching algorithms] OMS alignments, which DOL is able to express, may have been obtained by running different OMS matching algorithms.  If, in a given OMS engineering workflow, the information on which algorithm has been applied is clear from the context, it is possible to omit it in the alignment expressed in DOL.  Otherwise, \eg if the next person working on the OMS requires that information, it is possible to make it explicit.\todonote{TM: the alignment itself should be there explicitly. right? But then the information about the matching algorithm that has produced it is a mere annotation without semantics, isn't it?\\ CL: I agree with you. OK, so we will replace this with approximation algorithms. 
 %MC: using approximation algorithms is not different than using alignments, as both annotations have no effect on the semantics}
-\end{description}
+%\end{description}
 
 ~\todonote[author=Christoph Lange,date=D:201110060000+02'00',type=todo]{ask Michael Gr{\"u}ninger for his mereology example in CL}
 
@@ -3281,8 +3278,7 @@ The following list covers the possible cases where DOL provides a choice between
 
 The DOL serializations also supports the annotation of existing OMS via non-intrusive standoff markup, which points to the annotation subjects from external documentation files or from special embedded comments, extending the comment syntax of the respective OMS language; for XML serializations of OMS languages, RDFa extensions are specified, so that DOL RDF can be embedded.\ednote{where is this specified in detail?}
 
-A list of RDF vocabularies for annotating OMS is recommended as an annex to this \IS.
-
+A list of recommended RDF vocabularies for annotating OMS is presented in annex \ref{a:rdf-logic-vocab}.
 
 \clause{DOL abstract syntax}\label{c:abstract-syntax}
 
@@ -3307,7 +3303,7 @@ EBNF syntax.\footnote{\red{More precisely, \nisref{ISO/IEC 14977:1996} requires 
 for the sake of better readability. Also, we replace the separator \syntax{=}
 between left and right hand-side of a rule with \syntax{::=}, and 
 use the notation \syntax{N+}
-of one or more repetitions of \syntax{N}.}}  
+for one or more repetitions of \syntax{N}.}}  
 %Note that ISO EBNF lacks an operator for ``at least one repetition''.  This \IS therefore adopts the following convention: Whenever some sequence \syntax{S} is repeated at least once, we give it a non-terminal identifier of its own (\syntax{RepeatedS = S \{ S \} ;}), or group it as in \syntax{LongerExpression = Foo Bar ( S \{ S \} ) ;}.
 
 \sclause{Libraries}\label{c:libraries}
@@ -3544,7 +3540,8 @@ value. Moreover, the relation between the two non-logical symbols can be explici
 specified (like being equal, or only being subsumed) in a similar way to the Alignment API \cite{AlignmentAPI}. 
 \red{The relations that can be used in a correspondence are equivalence, disjointness, subsumption, membership (the last two with a
 variant for each direction) or a user-defined relation that is stored in a registry and must be prefixed with
-\url{purl.net/DOL}.
+\url{purl.net/DOL}.\ednote{This is the first mentioning of purl.net. Needs
+futher discussion!}
 A default correspondence can be used; it is applied to all pairs of non-logical symbols with 
 the same local names. The default relation in a correspondence is equivalence, unless  a different 
 relation is specified in a surrounding 
