second part of Terry's proofreading

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -806,7 +806,7 @@ DOL provides such a construct with syntax \syntax{o keep logic},  see \ref{c:foc
 Proposals shall provide a specification of a metalanguage for links such as imports,
 interpretations, refinements, and alignments between OMS/modules.
 	&
-DOL covers several metalogical relationships, namely entailments, interpretations, equivalences, refinements, alignments and module relations, see \ref{c:oms-mappings} and \ref{a:dol-text:mappings}.\ednote{Terry: Do you want to mention institutions here, presaging 6.5.4 ? and add 8.4 to the see list?}
+DOL covers several metalogical relationships, namely entailments, interpretations, equivalences, refinements, alignments and module relations, see \ref{c:oms-mappings} and \ref{a:dol-text:mappings}.\ednote{Terry: Do you want to mention institutions here, presaging 6.5.4 ? and add 8.4 to the see list? Till: I do not fully understand.}
 	\\ \hline
 %
 6.5.1(g) & 
@@ -3740,8 +3740,9 @@ as linked data.
 
 %\todonote[type=q-aut,author=Christoph Lange]{Does this motivation/justification sound reasonable to 
 %you? --- Yes.}
-Therefore, in order to impose fewer conformance requirements on applications, DOL commits to 
-using IRIs for identification \nisref{IETF/RFC 3987:2005}.  It is \recommended that libraries use 
+Therefore, in order to impose fewer conformance requirements on applications, DOL requires the use of
+ IRIs for identification per \nisref{IETF/RFC 3987:2005}.
+  It is \recommended that libraries use 
 IRIs that translate to URLs when applying the algorithm for mapping IRIs to URIs specified in 
 \nisref{IETF/RFC 3987:2005, Section 3.1}.  DOL descriptions of any element of a library that is 
 identified by a certain IRI \should be \emph{located} at the corresponding URL, so that agents can 
@@ -3782,7 +3783,7 @@ FullIRI = ($<$ as defined by the IRI production in \nisref{IETF/RFC 3987:2005} $
 \ssclause{Abbreviating IRIs using CURIEs}\label{c:curies}
 
 As IRIs tend to be long, and as syntactic mechanisms for abbreviating them have been standardized, 
-it is \recommended that applications employ such mechanisms and support expanding abreviative 
+it is \recommended that applications employ such mechanisms and support expanding abbreviatory
 notations into full IRIs.  For specifying the \emph{semantics} of DOL, this \IS assumes full IRIs 
 everywhere, but the DOL abstract \emph{syntax} adopts CURIEs (compact URI expressions) as an 
 abbreviation mechanism, as it is the most flexible one that has been standardized to date.  
@@ -3924,7 +3925,7 @@ prefix maps, even if the serialization does not support prefix maps otherwise.
 \sclause{Annotations}\label{s:annotations}
 
 \todonote{this subclause will be moved to annex M}
-~\todonote[author=Christoph Lange,date=D:201108061340+02'00',type=todo]{Properly integrate this text from our LaRC 2011 paper} Annotations always have a subject, which is identified by an IRI. Where the given OMS language does not provide a way of assigning IRIs to a desired subject of an annotation (\eg if one wants to annotate an import in OWL), a library may employ RDF annotations that use XPointer or \nisref{IETF/RFC 5147} as means of non-destructively referencing pieces of XML or text by URI.\footnote{We intend to utilize the extensibility of the XPointer framework by developing additional XPointer schemes, \eg for pointing to subterms of Common Logic sentences.}
+~\todonote[author=Christoph Lange,date=D:201108061340+02'00',type=todo]{Properly integrate this text from our LaRC 2011 paper} Annotations always have a subject, which is identified by an IRI. Where the given OMS language does not provide a way of assigning IRIs to a desired subject of an annotation (\eg if one wants to annotate an import in OWL), a library may employ RDF annotations that use XPointer or \nisref{IETF/RFC 5147} as a means of non-destructively referencing pieces of XML or text by URI.\footnote{We intend to utilize the extensibility of the XPointer framework by developing additional XPointer schemes, \eg for pointing to subterms of Common Logic sentences.}
 
 \clause{DOL text serialization}\label{a:text-syntax}
 
