headlines for MOF diagrams

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -6840,19 +6840,33 @@ to the term \termref{structured OMS} in this \IS}
 
 \newcommand{\toleft}{\noindent$x\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!\!$}
 
+\sclause{Libraries}
+
 \includegraphics[scale=0.6]{mof/dia/dia0.png}
+
+\sclause{Networks}
 
 \includegraphics[scale=0.6]{mof/dia/dia1.png}
 
+\sclause{Focused OMS}
+
 \toleft\includegraphics[scale=0.4]{mof/dia/dia2.png}
 
+\sclause{OMS Definitions}
+
 \toleft\includegraphics[scale=0.6]{mof/dia/dia3.png}
+
+\sclause{OMS Mappings}
 
 \toleft\includegraphics[scale=0.4]{mof/dia/dia4.png}
 
 \includegraphics[scale=0.6]{mof/dia/dia5.png}
 
+\sclause{Queries}
+
 \includegraphics[scale=0.6]{mof/dia/dia6.png}
+
+\sclause{IRIs and Prefixes}
 
 \includegraphics[scale=0.6]{mof/dia/dia7.png}
 
