--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3107,7 +3107,7 @@ The major functions of \DOL are the following:
 		called \emph{structured OMS}. \DOL provides a number of operations for this purpose; e.g.,
 		it is possible to define a structured OMS $C$ as the union of an OWL
 		ontology $A$ and a Common Logic ontology $B$.
-		\item \DOL provides defining connections between two OMS by using 
+		\item \DOL provides for defining connections between two OMS by using 
 		\emph{OMS mappings}. \DOL provides a variety of mappings; e.g.,  one can align terminology 
 		between different OMS or specify that some OMS is an extension of another. A set of OMS
 		and OMS mappings may form together an \emph{OMS network}.
